added TestNG, Build OK, Run TestCase failed at Map.of